# scratch_manager

./: .buildinfo  README.md  _config.yml  genindex.html  index.html  objects.inv  pyproject.toml  scratch_manager.conf  scratch_manager.py  scratch_manager.service  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
_includes/: head-custom.html
_static/: opensearch.xml
docs/: conf.py  index.rst
packaging/: control  scratch_manager.spec
scratch_manager/: __init__.py  daemon.py
